-----------------------------------------------------------------------------------------
Data Crow version 4.6                                              Released on 2023-01-xx
-----------------------------------------------------------------------------------------

[New]
- iTunes online search

[Changed]
- Changed all Data Crow product icons.
- The main application icon now consists of multiple sizes to allow support for multiple
  displaying purposes.
- Discogs maximum search results has been increased (online services pack version 1.4).
- Reintroduced the donation question.
- Updated the completely outdated About dialog contents.
- Added an executable for the server version.

[Fixed]
- Web module did not show the login page correctly.
- Web module you needed to login twice in order to get into the application (a 4.2.2 
  issue)
- Web module: download button was too large.
- Donate plugin was outdated and donate dialog pointed to the old site.
- Some fields were not translatable on the loan panel (item form > loan administration)
- Added an additional check when looking for the current active module to prevent 
  incorrect startup errors.
- The font was incorrect on opening the help section.
  

-----------------------------------------------------------------------------------------
Data Crow version 4.5                                              Released on 2023-01-19
-----------------------------------------------------------------------------------------

This version brings the old web module back to live. There are no major adjustments
since the 4.2.2 version as the goal was to get it back in, running on the latest 
libraries available. This means the web module can now be fully supported again and
makes it possible to extend the web module in the (near) future. One of the main 
things to change after this release is to make sure the UI also shows nicely on mobile
devices; it is currently not optimized for this.

[Updated]