@@ -227,7 +227,7 @@ public class DcServer implements Runnable, IStarterClient, IClient {
                             connector.getImageServerPort());
 
                     if (enableWebServer) {
-                        logger.info("Web clients can connect via the following URL: http://" + connector.getServerAddress() + 
+                        logger.info("Web clients can connect via the following URL: https://" + connector.getServerAddress() + 
                                 ":" + webServerPort + "/datacrow");
                     } else {
                         logger.info("The web module has not been started.");
