@@ -4,6 +4,16 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<display-name>Data Crow Web Client</display-name>
 
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Restricted HTTP Methods</web-resource-name>
+			<url-pattern>/*</url-pattern>
+			<http-method>OPTIONS</http-method>
+			<http-method>TRACE</http-method>
+		</web-resource-collection>
+		<auth-constraint />
+	</security-constraint>
+
 	<context-param>
 		<param-name>primefaces.UPLOADER</param-name>
 		<param-value>native</param-value>
@@ -22,18 +32,18 @@
 		<param-value>resources.application</param-value>
 	</context-param>
 
-    <servlet>
-        <servlet-name>ModuleServlet</servlet-name>
-        <servlet-class>org.datacrow.api.rest.ModuleRestServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ModuleServlet</servlet-name>
-        <url-pattern>/rest/modules/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ModuleServlet</servlet-name>
-        <url-pattern>/rest/fields/*</url-pattern>
-    </servlet-mapping>    
+	<servlet>
+		<servlet-name>ModuleServlet</servlet-name>
+		<servlet-class>org.datacrow.api.rest.ModuleRestServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ModuleServlet</servlet-name>
+		<url-pattern>/rest/modules/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ModuleServlet</servlet-name>
+		<url-pattern>/rest/fields/*</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
